K8s/app-deployment_old.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  labels:
    app: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: uadeel421/nana-project:1c9e1afe8e08e8d43a44f8d84e2b28de175619f4
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  type: ClusterIP
  selector:
      app: webapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
